--- a/index.html
+++ b/index.html
@@ -161,7 +161,8 @@
     <section class="about">
         <img class="about__img" src="assets/images/summer.png" alt="summer">
         <div class="about__wrapper">
-            <h2 class="about__title title">What makes Smoothie an <span class="about__title--green">awesome
+            <h2 class="about__title title about__title--white">What makes Smoothie an <span
+                    class="about__title--green">awesome
                     drink?</span>
             </h2>
             <ul class="about__list">
